# Regression-Analysis-2026

./: ..gitignore.un~
homework/: week02.md
students/01_waz/data/: clean_marketing.csv
students/01_waz/docs/week04/: report.md
students/01_waz/docs/week05/: report.md
students/01_waz/src/utils/: __init__.py  models.py
students/01_waz/src/week04/: __init__.py  main.py  solvers.py
students/01_waz/src/week05/: __init__.py  analysis.py  data_generator.py  main.py  simulation.py  solvers.py
students/01_waz/src/week09/: evaluate.py
students/02_zy/week10/results/: evaluation_comparison.md
students/05_qyz/data/: clean_marketing.csv
students/05_qyz/docs/: week07_report.md  week09_10_report.md
students/05_qyz/results/: evaluation_comparison.md
students/05_qyz/src/utils/: __init__.py  models.py
students/05_qyz/src/week07/: .gitignore  main.py
students/06_zaq/: .gitignore
students/06_zaq/src/milestone2/: main.py  main.py.bak  main_with_plot.py
students/06_zaq/src/utils/: metrics.py  transformers.py
students/07_nc/: pyproject.toml
students/07_nc/week06/src/: custom_ols.py  evaluator.py  main.py  plots.py  reporting.py  scenarios.py  utils.py
students/07_nc/week07/: main.py  pyproject.toml
students/07_nc/week07/src/utils/: __init__.py  models.py
students/08_zmy/: .gitignore
students/08_zmy/src/utils/: models.py
students/08_zmy/src/week06/: evaluation.py  main.py  models.py  (+3 more)
students/11_lww/: .gitignore  main.py  pyproject.toml
students/11_lww/src/: engine.py  evaluator.py
students/15_lxl/: pyproject.toml
students/17_jxx/: .gitignore
(+35 files in other folders)
