[project]
name = "week07-optimization-generalization"
version = "0.1.0"
description = "Week 7 regression optimization and generalization assignment"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
]

[tool.uv]
package = false
